# usqldb

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  HISTORY.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml  version-check.yml
tests/: test_cli.py  test_pg_compat.py
tests/test_pgwire/: test_auth.py  test_server.py
usql/: __init__.py
usql/cli/: __init__.py  commands.py  completer.py  formatter.py  repl.py
usql/core/: __init__.py  compiler.py  engine.py
usql/pg_compat/: __init__.py  information_schema.py  oid.py  pg_catalog.py
usqldb/: __init__.py
usqldb/cli/: __init__.py  commands.py  completer.py  formatter.py  repl.py
usqldb/core/: __init__.py  compiler.py  engine.py
usqldb/net/pgwire/: _connection.py  _query_executor.py
usqldb/pg_compat/: __init__.py  connection_registry.py  information_schema.py  oid.py  pg_catalog.py
